[gd_scene load_steps=3 format=3 uid="uid://blrivhrvgw42j"]

[ext_resource type="Script" path="res://scenes/background.gd" id="1_s0p0u"]
[ext_resource type="Texture2D" uid="uid://bgsawphmhyrrd" path="res://resources/sprites/bg_text.png" id="2_m1732"]

[node name="Background" type="Node2D"]
script = ExtResource("1_s0p0u")

[node name="BgText" type="Sprite2D" parent="."]
texture_filter = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_m1732")

[node name="BgText2" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(2600, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_m1732")

[node name="BgText3" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(5200, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_m1732")
